<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/albums"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/albums_title" />

        <TextView
            android:id="@+id/artists"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/artists_title" />

        <TextView
            android:id="@+id/songs"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/songs_title" />

    </LinearLayout>

    <TextView
        android:id="@+id/songDetails"
        style="@style/TextViewStyle"
        android:text="@string/song_detail_overview" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/discoverButton"
            android:layout_centerHorizontal="true"
            android:text="@string/download_button" />

        <Button
            android:id="@+id/discoverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/discover_button" />

    </RelativeLayout>

</LinearLayout>
